# LedControl

./: .gitignore  README.md
LedControl/: .gitignore  AbstractScheduler.h  CMakeLists.txt  ColorChangeScheduler.cpp  ColorChangeScheduler.h  RGB.h  example.cpp  exampleSketch.ino  main.cpp  make.sh  stddef.h  valgrind-memory-leak-check.sh
LedControl.Test/: .gitignore  LedControl.Test.sln  LedControl.Test.userprefs
LedControl.Test/LedControl.Test/: ActionParams.cs  LedControl.Test.csproj  LedControl.Test.sln  LedWrapper.cs  RGB.cs  RGBColors.cs
LedControl.Test/LedControl.Test/Tests/: ColorChangeTest.cs  StrobeTest.cs
LedControl/LedActions/: ActionLambda.h  BaseLedAction.cpp  BaseLedAction.h  ColorChangeAction.h  FullRainbowAction.h  FullRainbowToHalfAction.h  StrobeAction.h  StrobeCycleAction.h  StrobeRainbowAction.h  StrobeRainbowUnevenAction.h  StrobeUnevenAction.h  actions.h
